--- a/Green_S9_Group_project/src/app/admin/home/crop/crop-tips/addtip/addtip.page.html
+++ b/Green_S9_Group_project/src/app/admin/home/crop/crop-tips/addtip/addtip.page.html
@@ -30,15 +30,15 @@
               <p>Please Enter the  information</p>
             </ion-item>
 
-            <ion-item >
+            <!-- <ion-item >
               <ion-select name="type" placeholder="Select Type" ngModel #type="ngModel" required>
                 <ion-select-option value="Tips_for_choosing">Tips for choosing what to grow</ion-select-option>
                 <ion-select-option value="Sowing_tips">Sowing tips</ion-select-option>
               </ion-select>
-            </ion-item>
-            <ion-item *ngIf="!type.valid && type.touched" lines="none">
+            </ion-item> -->
+            <!-- <ion-item *ngIf="!type.valid && type.touched" lines="none">
               <p>Please Enter the  type</p>
-            </ion-item>
+            </ion-item> -->
 
 
 
