--- a/Green_S9_Group_project/src/app/admin/home/crop/crop-tips/crop-tips.page.html
+++ b/Green_S9_Group_project/src/app/admin/home/crop/crop-tips/crop-tips.page.html
@@ -34,14 +34,14 @@
     <ion-row>
       <ion-col class="img">
         <ion-toolbar color="primary" class="sawbar">
-          <ion-title>Sowing Tips</ion-title>
+          <!-- <ion-title>Sowing Tips</ion-title> -->
         </ion-toolbar>
 
         <ion-list *ngFor="let saw of cropTips ">
           <ion-item-sliding>
 
             <ion-card
-              *ngIf="saw.type === 'Sowing_tips'"
+              
               [routerLink]="['/admin','tabs','home',crop.name,'crop-tips','show',saw.tipsId]"
             >
               <ion-card-content>
@@ -68,7 +68,7 @@
       </ion-col>
     </ion-row>
 
-    <ion-row *ngIf="crop.name !== 'Paddy' && crop.name !== 'Pottato'">
+    <!-- <ion-row *ngIf="crop.name !== 'Paddy' && crop.name !== 'Pottato'">
       <ion-col class="img">
         <ion-toolbar color="danger" class="sawbar">
           <ion-title>Tips For Choosing What to Grow</ion-title>
@@ -79,7 +79,7 @@
           </ion-card>
         </ion-list>
       </ion-col>
-    </ion-row>
+    </ion-row> -->
   </ion-grid>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
