--- a/Green_S9_Group_project/src/app/dashboard/home/cropcultivation/crop-tips/crop-tips.page.html
+++ b/Green_S9_Group_project/src/app/dashboard/home/cropcultivation/crop-tips/crop-tips.page.html
@@ -19,18 +19,14 @@
 
     <ion-row>
       <ion-col class="img">
-        <ion-toolbar color="primary" class="sawbar">
-          <ion-title>Sowing Tips</ion-title>
-        </ion-toolbar>
-
         <ion-list *ngFor="let saw of cropTips ">
-          <ion-card *ngIf="saw.type === 'Sowing_tips'">
+          <ion-card >
             <ion-card-content> {{saw.information}} </ion-card-content>
           </ion-card>
         </ion-list>
       </ion-col>
     </ion-row>
-
+    <!--
     <ion-row *ngIf="crop.name !== 'Paddy'">
       <ion-col class="img">
         <ion-toolbar color="danger" class="sawbar">
@@ -42,7 +38,7 @@
           </ion-card>
         </ion-list>
       </ion-col>
-    </ion-row>
+    </ion-row> -->
   </ion-grid>
 
   <ion-grid *ngIf="isLoading">
