added delete and show pages

--- a/Green_S9_Group_project/src/app/admin/admin.page.html
+++ b/Green_S9_Group_project/src/app/admin/admin.page.html
@@ -2,7 +2,7 @@
   <ion-menu side="start" contentId="admin" menuId="owner">
     <ion-header>
       <ion-toolbar color="danger">
-        <ion-title> Go Greens </ion-title>
+        <ion-title> Go Green </ion-title>
       </ion-toolbar>
     </ion-header>
 
