--- a/Green_S9_Group_project/src/app/admin/home/crop/crop-tips/edit-tip/edit-tip.page.html
+++ b/Green_S9_Group_project/src/app/admin/home/crop/crop-tips/edit-tip/edit-tip.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>editTip</ion-title>
+    <ion-buttons slot="start">
+      <!-- <ion-button   *ngIf="!isLoading" [defaultHref]="['/admin','tabs','home',cropTip.name,'crop-tips']"></ion-button> -->
+    </ion-buttons>
+    <ion-title>Edit Tip</ion-title>
   </ion-toolbar>
 </ion-header>
 
