--- a/Green_S9_Group_project/src/app/admin/home/crop/crop-tips/edit-tip/edit-tip.page.html
+++ b/Green_S9_Group_project/src/app/admin/home/crop/crop-tips/edit-tip/edit-tip.page.html
@@ -1,12 +1,10 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <!-- <ion-button   *ngIf="!isLoading" [defaultHref]="['/admin','tabs','home',cropTip.name,'crop-tips']"></ion-button> -->
+      <ion-back-button [defaultHref]="['/admin','tabs','home',cropTip.name,'crop-tips','show',cropTip.tipsId]"> </ion-back-button>
     </ion-buttons>
-    <ion-title>Edit Tip</ion-title>
+    <ion-title>edit-tip</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
-</ion-content>
+<ion-content> </ion-content>
