--- a/Green_S9_Group_project/src/app/dashboard/home/home.page.html
+++ b/Green_S9_Group_project/src/app/dashboard/home/home.page.html
@@ -70,7 +70,7 @@
         </ion-card>
       </ion-col>
     </ion-row>
-
+    
     <ion-row>
       <ion-col size="11.5">
         <ion-item>
@@ -80,6 +80,17 @@
         </ion-item>
       </ion-col>
     </ion-row>
+
+    <br><br>
+
+    <ion-row>
+      <ion-col>
+        <ion-card>
+          <br><br>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  
   
   </ion-grid>
 </ion-content>
