--- a/Green_S9_Group_project/src/app/login/login.page.html
+++ b/Green_S9_Group_project/src/app/login/login.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar color="success">
-    <ion-title >Go Green</ion-title>
+    <ion-title >Green Live</ion-title>
   </ion-toolbar>
 </ion-header>
 
