--- a/Green_S9_Group_project/src/app/dashboard/home/cropcultivation/cropcultivation.page.scss
+++ b/Green_S9_Group_project/src/app/dashboard/home/cropcultivation/cropcultivation.page.scss
@@ -3,19 +3,22 @@
   box-sizing: border-box;
   padding: 0%;
 }
+
+/*
 .img
 {
-    padding: 0%;
-    margin: 0%;
+    padding:0%;
+    margin-top:50px;
+    width: 100%;
+    background-color: rgb(255, 255, 255);
 
     ion-img{
       object-fit: cover;
       width:auto;
-      padding: 0%;
+      padding-left:0%;
       margin: 0%;
-      height: 350px;
-
-
+      height: 100px;
+      
     }
 
     ion-col
@@ -44,5 +47,50 @@
         padding: 0%;
         margin: 0%;
         object-fit: cover;
+    }
+}
+*/
+.img{
+    background-color:rgb(255, 255, 255);
+    height: 100px;
+    margin-top: 10%;
+
+    h3{
+        text-align:end;
+        font-size: 2.5rem;
+        font-weight: 600;
+        padding-top:10px;
+        margin-left: 10px;
+    }
+
+    ion-img{
+        height: 100px;
+    }
+}
+.details{
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 40px;
+    padding-bottom: 0px;
+
+    ion-card{
+        border-radius: 30px;
+        background-color: white;
+        height: 220px;
+
+        ion-img{
+            width:150px;
+            height: 150px;
+            text-align: center;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        ion-card-title{
+            text-align: center;
+            font-weight:400;
+            font-size: 1.29rem;
+        }
     }
 }
