--- a/Green_S9_Group_project/src/app/dashboard/home/home.page.html
+++ b/Green_S9_Group_project/src/app/dashboard/home/home.page.html
@@ -20,7 +20,7 @@
       <ion-card class="cardStyle">
         <ion-item lines="none">
           <p style="font-weight: 500; color:white; margin-top: 15px;" >{{"Dashboard.Home.Today's_Report" | translate}}</p>
-          <ion-label id="date"  slot="end">{{ todayDate | date: "EEE dd MMM"}}</ion-label>
+          <ion-label id="date"  slot="end">{{ (todayDate | date: "EEE dd MMM") | translate}}</ion-label>
         </ion-item>
 
         <ion-item lines="none">
@@ -73,7 +73,7 @@
           [routerLink]="['/dashboard','tabs','home',crop.name]"
         >
           <ion-img [src]="crop.img"></ion-img>
-          <ion-card-title> {{crop.name}}</ion-card-title>
+          <ion-card-title> {{"Dashboard.Home.Crops."+crop.name| translate}}</ion-card-title>
         </ion-card>
       </ion-col>
     </ion-row>
