--- a/Green_S9_Group_project/src/app/dashboard/notification/edit/edit.page.html
+++ b/Green_S9_Group_project/src/app/dashboard/notification/edit/edit.page.html
@@ -1,13 +1,20 @@
 <ion-header>
   <ion-toolbar color="warning">
-    <ion-buttons defaultHref="/dashboard/tabs/notification">
-      <ion-back-button></ion-back-button>
+    <ion-buttons slot="start">
+      <ion-back-button
+        defaultHref="/dashboard/tabs/notification"
+      ></ion-back-button>
     </ion-buttons>
-    <ion-title>edit</ion-title>
+    <ion-title>Edit Message</ion-title>
+    <ion-buttons slot="primary" *ngIf="!isLoading">
+      <ion-button (click)="onCheckEdit()" [disabled]="!reactiveform.valid">
+        <ion-icon name="checkmark" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content >
+<ion-content>
   <ion-grid>
     <div *ngIf="isLoading">
       <ion-spinner></ion-spinner>
@@ -15,35 +22,28 @@
 
     <ion-col *ngIf="!isLoading">
       <form [formGroup]="reactiveform">
-        <ion-item>
-          <ion-img src="assets/profile.jfif">
-          </ion-img>
+        <ion-item lines="none">
+          <ion-label position="floating">Enter Your Message</ion-label>
+          <ion-textarea
+            type="text"
+            formControlName="message"
+            rows="5"
+            cols="10"
+            minlength="5"
+          ></ion-textarea>
+        </ion-item>
+        <ion-item
+          lines="none"
+          *ngIf="!reactiveform.get('message').valid && reactiveform.get('message').touched"
+          lines="none"
+        >
+          <ion-label>Message Should be Greather then 5 Characters</ion-label>
         </ion-item>
 
-        <ion-item>
-          <ion-label position="floating">Shop Name</ion-label>
-          <ion-input type="text" autocomplete autocorrect  formControlName="firstname"></ion-input>
-        </ion-item>
-        <ion-item *ngIf="!reactiveform.get('firstname').valid && reactiveform.get('firstname').touched" lines="none">
-          <ion-label>Shop Name Should be Valided</ion-label>
-        </ion-item>
-
-
-        <ion-item>
-          <ion-label position="floating">Shop Name</ion-label>
-          <ion-input type="text" autocomplete autocorrect  formControlName="lastname"></ion-input>
-        </ion-item>
-        <ion-item *ngIf="!reactiveform.get('lastname').valid && reactiveform.get('lastname').touched" lines="none">
-          <ion-label>Shop Name Should be Valided</ion-label>
-        </ion-item>
-
-
-        <ion-item>
-          <ion-label position="floating">Shop Name</ion-label>
-          <ion-input type="text" autocomplete autocorrect  formControlName="email"></ion-input>
-        </ion-item>
-        <ion-item *ngIf="!reactiveform.get('email').valid && reactiveform.get('email').touched" lines="none">
-          <ion-label>Shop Name Should be Valided</ion-label>
+        <ion-item lines="none">
+          <ion-label position="floating"
+            >{{notification.date | date }}</ion-label
+          >
         </ion-item>
       </form>
     </ion-col>
