--- a/Green_S9_Group_project/src/app/dashboard/home/cropcultivation/diseases/diseases.page.html
+++ b/Green_S9_Group_project/src/app/dashboard/home/cropcultivation/diseases/diseases.page.html
@@ -5,7 +5,9 @@
         [defaultHref]="['/dashboard','tabs','home',crop.name]"
       ></ion-back-button>
     </ion-buttons>
-    <ion-title>Green Live</ion-title>
+    <ion-title
+      >{{"Dashboard.CropDiseases.title."+crop.name | translate}}</ion-title
+    >
   </ion-toolbar>
 </ion-header>
 
@@ -22,7 +24,10 @@
             <ion-item class="title">
               <ion-card-header>
                 <ion-card-title>
-                  <h1>{{disease.diseaseName}}</h1>
+                  <h1>
+                    {{"Dashboard.CropDiseases.DiseaseName."+disease.diseaseName
+                    | translate}}
+                  </h1>
                 </ion-card-title>
               </ion-card-header>
             </ion-item>
@@ -30,10 +35,10 @@
             <ion-item class="btns">
               <ion-buttons>
                 <ion-button class="about" (click)="about(disease.diseaseId)"
-                  >About</ion-button
+                  >{{"Dashboard.CropDiseases.About" | translate}}</ion-button
                 >
                 <ion-button class="remedy" (click)="remedy(disease.diseaseId)"
-                  >Remedy</ion-button
+                  >{{"Dashboard.CropDiseases.Remedy" | translate}}</ion-button
                 >
               </ion-buttons>
             </ion-item>
