--- a/Green_S9_Group_project/src/app/admin/home/crop/animal-intervention/animal-intervention.page.html
+++ b/Green_S9_Group_project/src/app/admin/home/crop/animal-intervention/animal-intervention.page.html
@@ -1,9 +1,14 @@
 <ion-header>
-  <ion-toolbar color="primary" >
+  <ion-toolbar color="primary">
     <ion-buttons slot="start">
-      <ion-back-button [defaultHref]="['/admin','tabs','home',crop.name]"></ion-back-button >
+      <ion-back-button
+        [defaultHref]="['/admin','tabs','home',crop.name]"
+      ></ion-back-button>
     </ion-buttons>
-    <ion-title>Green Live</ion-title>
+    <ion-title *ngIf="!isLoading">{{crop.name}}</ion-title>
+    <ion-title *ngIf="isLoading">
+      <ion-spinner color="primary"></ion-spinner>
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -18,42 +23,25 @@
     <ion-row>
       <ion-col class="img">
         <ion-toolbar color="primary" class="sawbar">
-          <ion-title >Sowing Tips</ion-title>
+          <ion-title>Sowing Tips</ion-title>
         </ion-toolbar>
-
-        <!-- <ion-card *ngFor="let saw of saws">
-          <ion-card-content>
-            {{saw}}
-          </ion-card-content>
-        </ion-card> -->
-
       </ion-col>
     </ion-row>
-
 
     <ion-row>
       <ion-col class="img">
         <ion-toolbar color="danger" class="sawbar">
-          <ion-title >Tips For Choosing What to Grow</ion-title>
+          <ion-title>Tips For Choosing What to Grow</ion-title>
         </ion-toolbar>
-<!--
-        <ion-card *ngFor="let saw of saws">
-          <ion-card-content>
-            {{saw}}
-          </ion-card-content>
-        </ion-card> -->
-
       </ion-col>
     </ion-row>
-
   </ion-grid>
 
-  <ion-fab vertical="bottom" horizontal="end"  slot="fixed">
-    <ion-fab-button   [routerLink] = "['/admin','tabs','home',crop.name,'add-tips']" >
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button
+      [routerLink]="['/admin','tabs','home',crop.name,'animal-intervention','add-intervention']"
+    >
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
-
 </ion-content>
-
-
