get intervetion from db page

--- a/Green_S9_Group_project/src/app/admin/home/crop/animal-intervention/animal-intervention.page.html
+++ b/Green_S9_Group_project/src/app/admin/home/crop/animal-intervention/animal-intervention.page.html
@@ -23,18 +23,12 @@
     <ion-row>
       <ion-col class="img">
         <ion-toolbar color="primary" class="sawbar">
-          <ion-title>Sowing Tips</ion-title>
+          <ion-title class="text-center">Animal Intervention Names</ion-title>
         </ion-toolbar>
       </ion-col>
     </ion-row>
 
-    <ion-row>
-      <ion-col class="img">
-        <ion-toolbar color="danger" class="sawbar">
-          <ion-title>Tips For Choosing What to Grow</ion-title>
-        </ion-toolbar>
-      </ion-col>
-    </ion-row>
+    
   </ion-grid>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
