--- a/Green_S9_Group_project/src/app/admin/home/crop/animal-intervention/animal-intervention.page.html
+++ b/Green_S9_Group_project/src/app/admin/home/crop/animal-intervention/animal-intervention.page.html
@@ -30,8 +30,24 @@
 
     <ion-row>
       <ion-col>
-        <ion-list *ngFor="let intervention of interventions">
-          <ion-item>{{intervention.interventionName}}</ion-item>
+        <ion-list>
+          <ion-item-sliding *ngFor="let intervention of interventions">
+            <ion-item >
+              <ion-label>{{intervention.interventionName}}</ion-label>
+            </ion-item>
+
+            <ion-item-options side="start">
+              <ion-item-option color="primary">
+                <ion-icon name="create" slot="icon-only"></ion-icon>
+              </ion-item-option>
+            </ion-item-options>
+
+            <ion-item-options side="end">
+              <ion-item-option color="danger">
+                <ion-icon name="trash" slot="icon-only"></ion-icon>
+              </ion-item-option>
+            </ion-item-options>
+          </ion-item-sliding>
         </ion-list>
       </ion-col>
     </ion-row>
