added view and edit module and path

--- a/Green_S9_Group_project/src/app/admin/home/crop/animal-intervention/animal-intervention.page.html
+++ b/Green_S9_Group_project/src/app/admin/home/crop/animal-intervention/animal-intervention.page.html
@@ -30,7 +30,7 @@
 
     <ion-row>
       <ion-col>
-        <ion-list>
+        <ion-list *ngIf="interventions && interventions.length >= 0">
           <ion-item-sliding *ngFor="let intervention of interventions">
             <ion-item >
               <ion-label>{{intervention.interventionName}}</ion-label>
