--- a/Green_S9_Group_project/src/app/admin/home/crop/animal-intervention/edit/edit.page.html
+++ b/Green_S9_Group_project/src/app/admin/home/crop/animal-intervention/edit/edit.page.html
@@ -1,6 +1,10 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>edit</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button   [defaultHref]="['/admin','tabs','home',crop.name,'animal-intervention']"></ion-back-button>
+    </ion-buttons>
+    <ion-title *ngIf="isLoading">Loading Edit .....</ion-title>
+    <ion-title *ngIf="!isLoading">{{intervention.interventionName}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
