--- a/Green_S9_Group_project/src/app/admin/home/crop/animal-intervention/animal-intervention.page.html
+++ b/Green_S9_Group_project/src/app/admin/home/crop/animal-intervention/animal-intervention.page.html
@@ -31,7 +31,7 @@
     <ion-row>
       <ion-col>
         <ion-list *ngIf="interventions && interventions.length >= 0">
-          <ion-item-sliding *ngFor="let intervention of interventions">
+          <ion-item-sliding *ngFor="let intervention of interventions" #item>
             <ion-item [routerLink]="['/admin','tabs','home',crop.name,'animal-intervention','view',intervention.interventionId]">
               <ion-label>{{intervention.interventionName}}</ion-label>
             </ion-item>
@@ -43,7 +43,7 @@
             </ion-item-options>
 
             <ion-item-options side="end">
-              <ion-item-option color="danger" (click)="delete(intervention.interventionId)">
+              <ion-item-option color="danger" (click)="delete(intervention.interventionId,item)">
                 <ion-icon name="trash" slot="icon-only"></ion-icon>
               </ion-item-option>
             </ion-item-options>
