--- a/Green_S9_Group_project/src/app/dashboard/home/cropcultivation/animal-intervention/view/view.page.html
+++ b/Green_S9_Group_project/src/app/dashboard/home/cropcultivation/animal-intervention/view/view.page.html
@@ -1,41 +1,44 @@
 <ion-header>
-  <ion-toolbar color="primary">
+  <ion-toolbar>
     <ion-buttons slot="start">
       <ion-back-button
-        [defaultHref]="['/dashboard','tabs','home',crop.name]"
+        [defaultHref]="['/admin','tabs','home',crop.name,'animal-intervention']"
       ></ion-back-button>
     </ion-buttons>
-    <ion-title *ngIf="!isLoading">{{crop.name}}</ion-title>
-    <ion-title *ngIf="isLoading">
-      <ion-spinner color="primary"></ion-spinner>
-    </ion-title>
+    <ion-title *ngIf="isLoading">Loading View .....</ion-title>
+    <ion-title *ngIf="!isLoading">{{intervention.interventionName}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-grid *ngIf="!isLoading">
     <ion-row>
-      <ion-col class="img">
-        <ion-img [src]="crop.img"></ion-img>
-      </ion-col>
-    </ion-row>
-
-    <ion-row>
-      <ion-col class="img">
-        <ion-toolbar color="primary" class="sawbar">
-          <ion-title class="text-center">Animal Intervention Names</ion-title>
-        </ion-toolbar>
-      </ion-col>
-    </ion-row>
-
-    <ion-row>
-      <ion-col *ngIf="interventions && interventions.length >= 0">
-        <ion-list *ngFor="let intervention of interventions">
-          <ion-item
-            [routerLink]="['/dashboard','tabs','home',crop.name,'animal-intervention','view',intervention.interventionId]"
-          >
-            <ion-label>{{intervention.interventionName}}</ion-label>
+      <ion-col>
+        <ion-list>
+         
+          <ion-item>
+            <ion-img [src]="intervention.image"></ion-img>
           </ion-item>
+
+          <ion-toolbar color="primary" class="text-center my-2">About</ion-toolbar>
+          <ion-item>{{intervention.about}}</ion-item>
+
+          <ion-toolbar color="success" class="text-center my-2">How To Identify</ion-toolbar>
+          <ion-item>{{intervention.howToIdentify}}</ion-item>
+
+          <ion-toolbar color="danger" class="text-center my-2">How To Manage</ion-toolbar>
+          <ion-item>{{intervention.howToManage}}</ion-item>
+
+          <ion-toolbar color="secondary" class="text-center my-2">what It Does</ion-toolbar>
+          <ion-item>{{intervention.whatIdDoes}}</ion-item>
+
+          <ion-toolbar color="warning" class="text-center my-2">why And Where It Occours</ion-toolbar>
+          <ion-item>{{intervention.whyAndWhereItOccours}}</ion-item>
+
+          <ion-toolbar color="light" class="text-center my-2">why Is Important</ion-toolbar>
+          <ion-item>{{intervention.whyIsImportant}}</ion-item>
+
+         
         </ion-list>
       </ion-col>
     </ion-row>
