--- a/Green_S9_Group_project/src/app/dashboard/dashboard.page.html
+++ b/Green_S9_Group_project/src/app/dashboard/dashboard.page.html
@@ -3,7 +3,7 @@
     <ion-header>
       <ion-toolbar color="danger">
         <ion-title>
-          Go Green
+          Green Live
         </ion-title>
       </ion-toolbar>
     </ion-header>
