--- a/Green_S9_Group_project/src/app/dashboard/home/cropcultivation/cropcultivation.page.html
+++ b/Green_S9_Group_project/src/app/dashboard/home/cropcultivation/cropcultivation.page.html
@@ -11,7 +11,7 @@
   <ion-grid>
     <ion-row class="img">
       <ion-col>
-        <h3>Onion</h3>
+        <h3>{{crop.name}}</h3>
       </ion-col>
 
       <ion-col>
