successfully made to display images

--- a/Green_S9_Group_project/src/app/admin/home/crop/animal-intervention/view/view.page.html
+++ b/Green_S9_Group_project/src/app/admin/home/crop/animal-intervention/view/view.page.html
@@ -17,7 +17,7 @@
         <ion-list>
          
           <ion-item>
-            <ion-img [src]="intervention.image"></ion-img>
+            <ion-img [src]="intervention.image" alt="image"></ion-img>
           </ion-item>
 
           <ion-toolbar color="primary" class="text-center my-2">About</ion-toolbar>
