resolved some errors in cropTips page

--- a/Green_S9_Group_project/src/app/admin/home/crop/crop-tips/crop-tips.page.html
+++ b/Green_S9_Group_project/src/app/admin/home/crop/crop-tips/crop-tips.page.html
@@ -33,36 +33,29 @@
 
     <ion-row>
       <ion-col class="img">
-        <ion-toolbar color="primary" class="sawbar">
-
-        </ion-toolbar>
+        <ion-toolbar color="primary" class="sawbar"> </ion-toolbar>
 
         <ion-list *ngFor="let saw of cropTips ">
-          <ion-item-sliding>
-            <ion-card
+          <ion-item-sliding #item>
+            <ion-item
               [routerLink]="['/admin','tabs','home',crop.name,'crop-tips','show',saw.tipsId]"
-              >
-
-              <ion-card-content>
-                <ion-item href="#">
-                  <p>{{saw.information}}</p>
-                </ion-item>
-              </ion-card-content>
-            </ion-card>
-
+            >
+              <p>{{saw.information}}</p>
+            </ion-item>
+            
             <ion-item-options side="end">
               <ion-item-option color="primary">
                 <ion-icon
                   name="create-outline"
                   slot="icon-only"
-                  [routerLink]="['/admin','tabs','home',crop.name,'crop-tips','edit',saw.tipsId]"
                 ></ion-icon>
+                <!-- [routerLink]="['/admin','tabs','home',crop.name,'crop-tips','edit',saw.tipsId]" -->
 
               </ion-item-option>
             </ion-item-options>
 
             <ion-item-options side="start">
-              <ion-item-option color="danger">
+              <ion-item-option color="danger" (click)="deleteTip(saw.tipsId,item)">
                 <ion-icon name="trash-outline" slot="icon-only"></ion-icon>
               </ion-item-option>
             </ion-item-options>
@@ -84,7 +77,6 @@
         </ion-list>
       </ion-col>
     </ion-row> -->
-
   </ion-grid>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
