--- a/Green_S9_Group_project/src/app/admin/home/crop/crop-tips/show-tip/show-tip.page.html
+++ b/Green_S9_Group_project/src/app/admin/home/crop/crop-tips/show-tip/show-tip.page.html
@@ -19,10 +19,10 @@
           <ion-card-content>{{cropTip.information}} </ion-card-content>
         </ion-card>
 
-        <div class="btn">
+        <!-- <div class="btn"> -->
           <!-- <button class="btn btn-primary" [routerLink]="['/admin','tabs','home',cropTip.name,'crop-tips','edit',cropTip.tipsId]">Edit</button> -->
-          <button class="btn btn-danger" (click)="deleteTip(cropTip.tipsId)">Delete</button>
-        </div>
+          <!-- <button class="btn btn-danger" (click)="deleteTip(cropTip.tipsId)">Delete</button> -->
+        <!-- </div> -->
       </ion-col>
     </ion-row>
   </ion-grid>
