--- a/Green_S9_Group_project/src/app/dashboard/home/cropcultivation/cropcultivation.page.html
+++ b/Green_S9_Group_project/src/app/dashboard/home/cropcultivation/cropcultivation.page.html
@@ -62,8 +62,9 @@
       <ion-col>
         <ion-card [routerLink]="['/dashboard','tabs','home',crop.name,'animal-intervention']">
           <ion-img style=" width: 150px; height: 150px;" src="assets//project_images/grasshoper.jpg"></ion-img>
+          <ion-card-title> Animal <br> Intervention</ion-card-title>
 
-          <ion-card-title>   {{"Dashboard.CropCultivation.Animal_Intervention"|translate}} </ion-card-title>
+          <!--<ion-card-title>{{"Dashboard.CropCultivation.Animal_Intervention"|translate}}</ion-card-title>-->
 
         </ion-card>
       </ion-col>
