--- a/Green_S9_Group_project/src/app/dashboard/home/cropcultivation/crop-tips/crop-tips.page.html
+++ b/Green_S9_Group_project/src/app/dashboard/home/cropcultivation/crop-tips/crop-tips.page.html
@@ -10,9 +10,12 @@
 </ion-header>
 
 <ion-content>
-  <ion-grid>
-    <ion-row>
-      <ion-col class="img">
+    <ion-row class="images">
+      <ion-col>
+        <h3>{{crop.name}}</h3>
+      </ion-col>
+
+      <ion-col>
         <ion-img [src]="crop.img"></ion-img>
       </ion-col>
     </ion-row>
@@ -38,7 +41,7 @@
           </ion-card>
         </ion-list>
       </ion-col> -->
-  </ion-grid>
+  
 
   <ion-grid *ngIf="isLoading">
     <ion-list-header>
