--- a/Green_S9_Group_project/src/app/dashboard/home/cropcultivation/crop-tips/crop-tips.page.scss
+++ b/Green_S9_Group_project/src/app/dashboard/home/cropcultivation/crop-tips/crop-tips.page.scss
@@ -1,14 +1,43 @@
-ion-img{
-  object-fit: cover;
-  width:auto;
-  padding: 0%;
-  margin: 0%;
-  height: 350px;
+
+.images{
+  background-color:rgb(255, 255, 255);
+  height: 100px;
+  margin-top: 10%;
+
+  h3{
+      text-align:end;
+      font-size: 2.5rem;
+      font-weight: 600;
+      padding-top:10px;
+      margin-left: 10px;
+  }
+
+  ion-img{
+      height: 90px;
+  }
 }
+/*
 .img{
-  margin: 0%;
-  padding: 0%;
+  background-color:rgb(255, 255, 255);
+  height: 100px;
+  margin-top: 10%;
+
+  /*
+  h3{
+      text-align:end;
+      font-size: 2.5rem;
+      font-weight: 600;
+      padding-top:10px;
+      margin-left: 10px;
+  }
+
+  ion-img{
+      height: 100px;
+  }
+  
 }
+*/
+
 
 ion-row
 {
@@ -20,4 +49,8 @@ ion-row
 
 ion-card{
   background-color: white;
+}
+
+ion-card-content{
+  font-size: 1.2rem;
 }
