--- a/Green_S9_Group_project/src/app/admin/admin.page.html
+++ b/Green_S9_Group_project/src/app/admin/admin.page.html
@@ -19,10 +19,10 @@
             <ion-label>Notification</ion-label>
           </ion-item>
 
-          <ion-item lines="none" routerLink="/admin/tabs/card">
+          <!-- <ion-item lines="none" routerLink="/admin/tabs/card">
             <ion-icon name="card" slot="start"></ion-icon>
             <ion-label>Card</ion-label>
-          </ion-item>
+          </ion-item> -->
 
           <ion-item lines="none" routerLink="/admin/tabs/profile">
             <ion-icon name="person-circle-outline" slot="start"></ion-icon>
@@ -50,9 +50,9 @@
         <ion-icon name="notifications-outline"></ion-icon>
       </ion-tab-button>
 
-      <ion-tab-button tab="card">
+      <!-- <ion-tab-button tab="card">
         <ion-icon name="card"></ion-icon>
-      </ion-tab-button>
+      </ion-tab-button> -->
 
       <ion-tab-button tab="profile">
         <ion-icon name="person-circle-outline"></ion-icon>
