--- a/Green_S9_Group_project/src/app/admin/admin.page.html
+++ b/Green_S9_Group_project/src/app/admin/admin.page.html
@@ -14,10 +14,10 @@
             <ion-label>Home</ion-label>
           </ion-item>
 
-          <ion-item lines="none" routerLink="/admin/tabs/notification">
+          <!-- <ion-item lines="none" routerLink="/admin/tabs/notification">
             <ion-icon name="notifications-outline" slot="start"></ion-icon>
             <ion-label>Notification</ion-label>
-          </ion-item>
+          </ion-item> -->
 
           <!-- <ion-item lines="none" routerLink="/admin/tabs/card">
             <ion-icon name="card" slot="start"></ion-icon>
@@ -45,12 +45,12 @@
       <ion-tab-button tab="home">
         <ion-icon name="home"></ion-icon>
       </ion-tab-button>
-
+<!--
       <ion-tab-button tab="notification">
         <ion-icon name="notifications-outline"></ion-icon>
-      </ion-tab-button>
+      </ion-tab-button> -->
 
-    
+
 
       <ion-tab-button tab="profile">
         <ion-icon name="person-circle-outline"></ion-icon>
