cloning last work

--- a/Green_S9_Group_project/src/app/dashboard/home/home.page.scss
+++ b/Green_S9_Group_project/src/app/dashboard/home/home.page.scss
@@ -1,12 +1,6 @@
-/*
-.weather{
-    background-color: rgb(5, 131, 174);
-    width: 500px;
-    height: 200px;
-    border-radius: 25px;
-    color: black;
+ion-content{
+  --ion-background-color:#9FE6AF;
 }
-*/
 
 
 ion-row{
